content/terraform/v1.14.x/docs/cli/commands/apply.mdx
---
page_title: terraform apply command reference
description: The `terraform apply` command executes the actions proposed in a Terraform plan
  to create, update, or destroy infrastructure.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-19T13:27:46Z
last_modified: 2025-11-19T13:27:46Z
# END AUTO GENERATED METADATA
---

# `terraform apply` command

The `terraform apply` command executes the operations proposed in a Terraform
plan.

> **Hands On:** Try the [Apply Terraform Configuration](/terraform/tutorials/cli/apply?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial to learn how Terraform applies a configuration, how Terraform recovers from errors during apply, and common ways to use this command.

## Usage

Usage: `terraform apply [options] [plan file]`

### Automatic Plan Mode

When you run `terraform apply` without passing a saved plan file, Terraform automatically creates a new execution plan as if you had run [`terraform plan`](/terraform/cli/commands/plan), prompts you to approve that plan, and performs the indicated operations. You can use all of the [planning modes](/terraform/cli/commands/plan#planning-modes) and
[planning options](/terraform/cli/commands/plan#planning-options) to customize how Terraform will create the plan.

You can pass the `-auto-approve` option to instruct Terraform to apply the plan without asking for confirmation.

!> **Warning:** If you use `-auto-approve`, we recommend making sure that no one can change your infrastructure outside of your Terraform workflow. This minimizes the risk of unpredictable changes and configuration drift.

### Saved Plan Mode

When you pass a [saved plan file](/terraform/cli/commands/plan#out-filename) to `terraform apply`, Terraform performs the operations in the saved plan without prompting you for confirmation. You may want to use this two-step workflow when [running Terraform in automation](/terraform/tutorials/automation/automate-terraform?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS).

Use [`terraform show`](/terraform/cli/commands/show) to inspect a saved plan file before applying it.

When using a saved plan, you cannot specify any additional planning modes or options. These options only affect Terraform's decisions about which
actions to take, and the plan file contains the final results of those
decisions.

### Plan Options

Without a saved plan file, `terraform apply` supports all planning modes and planning options available for `terraform plan`.

- **[Planning Modes](/terraform/cli/commands/plan#planning-modes):** These include `-destroy`, which creates a plan to destroy all remote objects, and `-refresh-only`, which creates a plan to update Terraform state and root module output values.
- **[Planning Options](/terraform/cli/commands/plan#planning-options):** These include specifying which resource instances Terraform should replace (`-replace`), setting Terraform input variables (`-var` and `-var-file`), etc.

### Apply Options

The following options change how the apply command executes and reports on the apply operation.

- `-auto-approve` - Skips interactive approval of the plan before applying. Terraform ignores this
  option when you pass a previously-saved plan file. This is because
  Terraform interprets the act of passing the plan file as the approval.

- `-compact-warnings` - Shows any warning messages in a compact form which
  includes only the summary messages, unless the warnings are accompanied by
  at least one error and thus the warning text might be useful context for
  the errors.

- `-input=false` - Disables all of Terraform's interactive prompts. Note that
  this also prevents Terraform from prompting for interactive approval of a
  plan, so Terraform will conservatively assume that you do not wish to
  apply the plan, causing the operation to fail. If you wish to run Terraform
  in a non-interactive context, see
  [Running Terraform in Automation](/terraform/tutorials/automation/automate-terraform?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) for some
  different approaches.

- `-invoke=action.<TYPE>.<LABEL>`: Specifies a provider action in the configuration file to invoke. Refer to [Invoke an action](/terraform/language/invoke-actions) for more information.
 

- `-json` - Enables the [machine readable JSON UI][machine-readable-ui] output.
  This implies `-input=false`, so the configuration must have no unassigned
  variable values to continue. To enable this flag, you must also either enable
  the `-auto-approve` flag or specify a previously-saved plan.

  [machine-readable-ui]: /terraform/internals/machine-readable-ui

- `-lock=false` - Don't hold a state lock during the operation. This is
  dangerous if others might concurrently run commands against the same
  workspace.

- `-lock-timeout=DURATION` - Unless locking is disabled with `-lock=false`,
  instructs Terraform to retry acquiring a lock for a period of time before
  returning an error. The duration syntax is a number followed by a time
  unit letter, such as "3s" for three seconds.

- `-no-color` - Disables terminal formatting sequences in the output. Use this
  if you are running Terraform in a context where its output will be
  rendered by a system that cannot interpret terminal formatting.

- `-parallelism=n` - Limit the number of concurrent operations as Terraform
  [walks the graph](/terraform/internals/graph#walking-the-graph). Defaults to
  10\.

- `-replace=resource` - Specifies a resource instance that Terraform plans to replace instead of performing an update or no-op operation.

- All [planning modes](/terraform/cli/commands/plan#planning-modes) and
[planning options](/terraform/cli/commands/plan#planning-options) for
`terraform plan` - Customize how Terraform will create the plan. Only available when you run `terraform apply` without a saved plan file.

For configurations using
[the `local` backend](/terraform/language/backend/local) only,
`terraform apply` also accepts the legacy options
[`-state`, `-state-out`, and `-backup`](/terraform/language/backend/local#command-line-arguments).

## Passing a Different Configuration Directory

Terraform v0.13 and earlier also accepted a directory path in place of the
plan file argument to `terraform apply`, in which case Terraform would use
that directory as the root module instead of the current working directory.

That usage was deprecated in Terraform v0.14 and removed in Terraform v0.15.
If your workflow relies on overriding the root module directory, use
[the `-chdir` global option](/terraform/cli/commands#switching-working-directory-with-chdir)
instead, which works across all commands and makes Terraform consistently look
in the given directory for all files it would normally read or write in the
current working directory.

If your previous use of this legacy pattern was also relying on Terraform
writing the `.terraform` subdirectory into the current working directory even
though the root module directory was overridden, use
[the `TF_DATA_DIR` environment variable](/terraform/cli/config/environment-variables#tf_data_dir)
to direct Terraform to write the `.terraform` directory to a location other
than the current working directory.

## Errors during an apply operation

When Terraform or a Terraform provider encounters an error during an apply step, it performs the following steps:

1. Logs the error and reports it to the console.
1. Updates the state file with any changes to your resources.
1. Unlocks the state file.
1. Exits the apply operation.

Your infrastructure may be in an invalid state after a Terraform apply operation fails. Terraform does not automatically roll back a partially-completed apply. After you resolve the error, you must apply your configuration again to update your infrastructure to the desired state.

## Examples

The following examples show how to use the `terraform apply` command for common use cases.

### Pass values to input variables

The following command sets the `env` input variable to `prod` at runtime: 

```shell-session
$ terraform apply -var='env=prod'
```

The following command sets input variable values by using a local file named `my-vars.tfvars`: 

```shell-session
$ terraform apply -var-file='my-vars.tfvars'
``` 
 
### Invoke actions

The following command targets the `aws_lambda_invoke` action configuration named `test`. As a result, Terraform invokes the action and ignores all other configurations:

```shell-session
$ terraform apply -invoke='action.aws_lambda_invoke.test`
```

You can use `for_each` and `count` [meta-arguments](/terraform/language/meta-arguments) in `action` configurations. These meta-arguments can invoke an action multiple times. Refer to the [`action` block reference](/terraform/language/block/action) for more information. 

The following command invokes the `aws_lambda_invoke` action configuration named `test` one time:

```shell-session
$ terraform apply -invoke='action.aws_lambda_invoke.test["first-member-of-a-set"]'
```